<?xml version="1.0"?>
<package>
  <name>snap_circuits</name>
  <version>0.0.1</version>
  <description>
    The snap_circuits package provides a package for the perception part of the snapCircuits experiments.
  </description>

  <maintainer email="alessandro.roncone@yale.edu">Alessandro Roncone</maintainer>
  <!-- <maintainer email="olivier.mangin@yale.edu">Olivier Mangin</maintainer> -->
  <license>GPLv3</license>

  <url type="repository">https://github.com/ScazLab/snap_circuits_perception</url>
  <url type="bugtracker">https://github.com/ScazLab/snap_circuits_perception/issues</url>
  <!-- <url type="website">http://wiki.ros.org/snap_circuits_perception</url> -->

  <author email="alessandro.roncone@yale.edu">Alessandro Roncone</author>
  <!-- <author email="olivier.mangin@yale.edu">Olivier Mangin</author> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
